fix (curtain): overflow y hidden while animation

--- a/styles/components/_curtain.scss
+++ b/styles/components/_curtain.scss
@@ -1,3 +1,11 @@
+body {
+  overflow-y: hidden;
+}
+
+body.loaded {
+  overflow-y: scroll;
+}
+
 .curtain {
   position: fixed;
   inset: 0;
